--- a/.github/workflows/pipeline-linter.yml
+++ b/.github/workflows/pipeline-linter.yml
@@ -1,4 +1,4 @@
-name: Pipeline linter
+name: Pipeline Linter
 on:
   push:
     branches:
@@ -9,23 +9,19 @@ on:
 
 jobs:
   linter:
-  # especifico en qué ambiente va a correr la tarea automatizada, ex servidor ubuntu
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
 
-    # especifico cuales son los pasos
     steps:
-    # Obtener el código
       - name: Checkout code
-      uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
-      # Que va a usar y cual version
-      - name: Use Noje.js
-      uses: actions/setup-node@v2
-      with: 
-        node-version: '20.14'
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20.14'
 
       - name: Install dependencies
         run: npm install
 
       - name: Run linter
-        run: npm run lint    
+        run: npm run lint
